--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,6 @@
       }
     },
     "routes": [
-      { "src": "/(.*)", "dest": "assignments/ajax-php/api" }
+      { "src": "/(.*)", "dest": "assignments/ajax-php/" }
     ]
   }
