--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,10 @@
 {
-    "functions": {
-      "api/*.php": {
-        "runtime": "vercel-php@0.7.3"
-      }
-    },
-    "routes": [
-      { "src": "/(.*)", "dest": "assignments/ajax-php/" }
-    ]
-  }
+  "functions": {
+    "api/*.php": {
+      "runtime": "vercel-php@0.6.0"
+    }
+  },
+  "routes": [
+    { "src": "/(.*)",  "dest": "/group_assignments/ga6/zip.php" }
+  ]
+}
