--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,7 @@
     }
   },
   "routes": [
-    { "src": "/(.*)",  "dest": "/group_assignments/ga6/zip.php" }
+    { "src": "/(.*)",  "dest": "/group_assignments/ga6/zip.php" },
+    { "src": "/(.*)",  "dest": "/group_assignments/ga5/getWord.php" }
   ]
 }
