--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,37 @@
 {
+  "version": 2,
+  "routes": [
+    {
+      "src": "/api/(.*.php)",
+      "dest": "/api/$1",
+      "headers": {
+        "Content-Type": "text/html; charset=UTF-8"
+      }
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/$1",
+      "headers": {
+        "Cache-Control": "s-maxage=86400"
+      }
+    }
+  ],
   "functions": {
     "api/*.php": {
       "runtime": "vercel-php@0.6.0"
     }
-  }
+  },
+  "headers": [
+    {
+      "source": "/(.*.php)",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "text/html; charset=UTF-8"
+        }
+      ]
+    }
+  ],
+  "cleanUrls": false,
+  "trailingSlash": false
 }
