--- a/vercel.json
+++ b/vercel.json
@@ -1,37 +1,25 @@
 {
-  "version": 2,
-  "routes": [
-    {
-      "src": "/api/(.*.php)",
-      "dest": "/api/$1",
-      "headers": {
-        "Content-Type": "text/html; charset=UTF-8"
-      }
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/$1",
-      "headers": {
-        "Cache-Control": "s-maxage=86400"
-      }
-    }
-  ],
   "functions": {
     "api/*.php": {
       "runtime": "vercel-php@0.6.0"
     }
   },
-  "headers": [
+  "routes": [
     {
-      "source": "/(.*.php)",
-      "headers": [
-        {
-          "key": "Content-Type",
-          "value": "text/html; charset=UTF-8"
-        }
-      ]
+      "src": "/api/(.*)",
+      "dest": "/api/$1"
+    },
+    {
+      "src": "/ga6/?$",
+      "dest": "/group_assignments/ga6/zip.html"
+    },
+    {
+      "src": "/ga6/(.*)",
+      "dest": "/group_assignments/ga6/$1"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
     }
-  ],
-  "cleanUrls": false,
-  "trailingSlash": false
+  ]
 }
