--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "version": 2,
   "functions": {
-    "api/zip/zip.php": {
+    "api/zip/index.php": {
       "runtime": "vercel-php@0.6.0"
     }
   },
