--- a/vercel.json
+++ b/vercel.json
@@ -1,21 +1,7 @@
 {
-  "version": 2,
   "functions": {
-    "api/zip.php": {
-      "runtime": "vercel-php@0.6.0"
+    "api/*.php": {
+      "runtime": "vercel-php@0.7.3"
     }
-  },
-  "headers": [
-    {
-      "source": "/api/(.*.php)",
-      "headers": [
-        {
-          "key": "Content-Type",
-          "value": "text/html; charset=UTF-8"
-        }
-      ]
-    }
-  ],
-  "cleanUrls": false,
-  "trailingSlash": false
+  }
 }
