--- a/.vercelignore
+++ b/.vercelignore
@@ -1,7 +1,7 @@
 {
   "functions": {
     "api/**": {
-      "excludeFiles": "{assignments,group_assignments,img,scripts,styles,navbar.html,footer.html,index.html}/**"
+      "excludeFiles": "{assignments,group_assignments}/**"
     }
   }
 }
