--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,13 @@
 {
   "functions": {
-    "api/*.php": {
+    "**/*.php": {
       "runtime": "vercel-php@0.7.3"
     }
-  }
+  },
+  "routes": [
+    {
+      "src": "/(.*\\.php)",
+      "dest": "/$1"
+    }
+  ]
 }
